syntax = "proto3";

package com.road.yishi.proto.room;

message RoomPlayerListMsg {
  int32 state = 1;
  repeated int32 roomPlayer = 2;
}
